auth_security/dex/manifests/dex.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  type: ClusterIP
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: 5556
  - name: metrics
    port: 5566
    protocol: TCP
    targetPort: 5566
